update tenant workflow
